# ESP32-based-terminal-interaction-panel

./: README.md
ESP32/: ESP32.txt
ESP32/ESP32_Project/: CMakeLists.txt  partitions.csv
ESP32/ESP32_Project/BSP/: CMakeLists.txt
ESP32/ESP32_Project/BSP/GT911/: GT911.c  GT911.h
ESP32/ESP32_Project/BSP/I2S/: I2S.c  I2S.h
ESP32/ESP32_Project/BSP/SPI/: SPI.c  SPI.h
ESP32/ESP32_Project/BSP/TF_Card/: TF_Card.c  TF_Card.h
ESP32/ESP32_Project/BSP/Timer/: Timer.c  Timer.h
ESP32/ESP32_Project/BSP/USART/: USART.c  USART.h
ESP32/ESP32_Project/BSP/WIFI/: WIFI.c  WIFI.h
ESP32/ESP32_Project/BSP/bluetooth/: bluetooth.c  bluetooth.h
ESP32/ESP32_Project/BSP/sys_Init/: sys_Init.c  sys_Init.h
ESP32/ESP32_Project/main/: CMakeLists.txt  DaoShu.pcm  idf_component.yml  main.c
LVGL/: LVGL.txt
STC8/: STC8.txt
