idf_component_register(SRCS "./I2S/I2S.c"
                            "./SPI/SPI.c"
                            "./WIFI/WIFI.c"
                            "./GT911/GT911.c"
                            "./Timer/Timer.c"
                            "./USART/USART.c"
                            "./TF_Card/TF_Card.c"
                            "./TFT_LCD/TFT_LCD.c"
                            "./sys_Init/sys_Init.c"
                            "./bluetooth/bluetooth.c"
                            
                    INCLUDE_DIRS "."
                                 "I2S"
                                 "SPI"
                                 "WIFI"
                                 "GT911"
                                 "Timer"
                                 "USART"
                                 "TF_Card"
                                 "TFT_LCD"
                                 "sys_Init"
                                 "bluetooth"
                    )
