idf_component_register(SRCS "main.c"
                            "../BSP/I2S/I2S.c"
                            "../BSP/SPI/SPI.c"
                            "../BSP/WIFI/WIFI.c"
                            "../BSP/USART/USART.c"
                            "../BSP/Timer/Timer.c"
                            "../BSP/GT911/GT911.c"
                            "../BSP/TF_Card/TF_Card.c"
                            "../BSP/TFT_LCD/TFT_LCD.c"
                            "../BSP/sys_Init/sys_Init.c"
                            "../BSP/bluetooth/bluetooth.c"
                            
                    INCLUDE_DIRS "."
                                 "../BSP/I2S"
                                 "../BSP/SPI"
                                 "../BSP/GT911"
                                 "../BSP/Timer"
                                 "../BSP/USART"
                                 "../BSP/WIFI"
                                 "../BSP/TF_Card"
                                 "../BSP/TFT_LCD"
                                 "../BSP/sys_Init"
                                 "../BSP/bluetooth"

                                 EMBED_FILES "canon.pcm"
                                 EMBED_FILES "DaoShu.pcm"
                    )
